# bandido

./: LICENSE  README.md  pyproject.toml
docker/: Dockerfile
notebooks/crypto/: 01-prepare-data.ipynb  01b-eda.ipynb  02-tf-agents-bandit-train.ipynb  02-tf-agents-bandit.ipynb  03-tf-agents-bandit-deploy.ipynb  03-tf-agents-bandit-train-neural.ipynb  bandits_tutorial.ipynb  bandits_tutorial_modified.ipynb  environment.py  observers.py  per_arm_bandits_tutorial.ipynb  results.csv  trading_env.py  trading_utils.py  utils.py
notebooks/crypto/policy/: fingerprint.pb  policy_specs.pbtxt  saved_model.pb
notebooks/crypto/policy/variables/: variables.data-00000-of-00001  variables.index
notebooks/crypto/utils/: agent.py  observers.py  trading.py  tuner.py
notebooks/tutorials/: per_arm_bandits_tutorial.ipynb
server/: .gitignore  app.py  db.py  pyproject.toml  recommender.py  schema.sql
server/templates/: index.html
