[project]
name = "bandido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pappa", email = "dr.pappa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.91",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "tensorflow[and-cuda]>=2.19.0",
    "tf-agents>=0.19.0",
    "tf-keras>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
