[project]
name = "bandido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Pappa", email = "dr.pappa@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "tensorflow>=2.19.0",
    "tf-agents>=0.19.0",
    "tf-keras>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ccxt>=4.4.91", "ipykernel>=6.29.5"]
macos = ["tensorflow-macos"]
